--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -14060,8 +14060,8 @@ noscript .disclosure-list--visible {
   ;
   font-weight: {{ fonts_font_headings_weight }}
   ;
-  margin-bottom: 30px;
-  font-size: 84px;
+  margin: 50px 0 30px;
+  font-size: clamp(48px, 5vw, 84px);
   line-height: normal;
   color: {{ settings.title-colour }}
   ;
