--- a/assets/theme.css
+++ b/assets/theme.css
@@ -15899,10 +15899,15 @@ img[data-rimg=loaded] {
 .collectionSlider__image .section-title{
   position: relative;
   z-index: 1;
+  color: #E7E7E7;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .collectionSlider__slider{
   background-color: #84705B;
-  height: 700px;
+  height: 800px;
 
 }
