--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2538,20 +2538,15 @@ a.pswp__share--download:hover {
 }
 
 .section-title {
-  font-family: {{ fonts_font_headings_secondary_family }}
-  ;
-  font-style: {{ fonts_font_headings_secondary_style }}
-  ;
-  font-weight: {{ fonts_font_headings_secondary_weight }}
-  ;
+  font-family: "qualy";
+  font-style: normal;
+  font-weight: 400;
   padding: 45px 0 0;
   margin: 0 0 45px;
-  font-size: 18px;
+  font-size: 28px;
   letter-spacing: 0.1em;
-  color: {{ settings.title-colour }}
-  ;
+  color: #B7A490;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .section-border {
@@ -14069,17 +14064,13 @@ noscript .disclosure-list--visible {
 }
 
 .picture-block-heading {
-  font-family: {{ fonts_font_headings_family }}
-  ;
-  font-style: {{ fonts_font_headings_style }}
-  ;
-  font-weight: {{ fonts_font_headings_weight }}
-  ;
+  font-family: "karinlight", sans-serif;
+  font-style: normal;
+  font-weight: 400;
   margin: 50px 0 30px;
   font-size: clamp(48px, 5vw, 84px);
   line-height: normal;
-  color: {{ settings.title-colour }}
-  ;
+  color: #052422;
 }
 @media screen and (max-width: 800px) {
   .picture-block-heading {
