add(font) theme.css.liquid

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -149,6 +149,23 @@
 /*
 	Styles for basic PhotoSwipe functionality (sliding area, open/close transitions)
 */
+
+
+@font-face {
+  font-family: 'karinlight';
+  src: url('./karinlight-webfont.woff2') format('woff2'), url('./karinlight-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'qualy';
+  src: url('./qualy-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
 /* pswp = photoswipe */
 .pswp {
   display: none;
